--- a/dubbo-dependencies-bom/pom.xml
+++ b/dubbo-dependencies-bom/pom.xml
@@ -539,6 +539,12 @@
                 <version>${metrics_version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba.middleware</groupId>
+                <artifactId>metrics-os</artifactId>
+                <version>${metrics_version}</version>
+            </dependency>
+
             <!-- for dubbo-registry-sofa -->
             <dependency>
                 <groupId>com.alipay.sofa</groupId>
