--- a/dubbo-monitor/dubbo-monitor-default/pom.xml
+++ b/dubbo-monitor/dubbo-monitor-default/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>metrics-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.alibaba.middleware</groupId>
+            <artifactId>metrics-os</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-rpc-dubbo</artifactId>
             <version>${project.parent.version}</version>
