--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
         <module>dubbo-dependencies</module>
         <module>dubbo-event</module>
         <module>dubbo-metadata</module>
+        <module>dubbo-bootstrap</module>
     </modules>
 
     <dependencyManagement>
