Changes the name 'dubbo-rpc-jms-implementor-activemq' to 'dubbo-rpc-jms-activemq'

--- a/dubbo-all/pom.xml
+++ b/dubbo-all/pom.xml
@@ -228,7 +228,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-rpc-jms-implementor-activemq</artifactId>
+            <artifactId>dubbo-rpc-jms-activemq</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
