--- a/dubbo-distribution/pom.xml
+++ b/dubbo-distribution/pom.xml
@@ -273,6 +273,18 @@
                 <finalName>apache-dubbo-incubating-${project.version}</finalName>
                 <plugins>
                     <plugin>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>${maven_source_version}</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
                         <artifactId>maven-assembly-plugin</artifactId>
                         <version>3.1.0</version>
                         <executions>
