--- a/dubbo-demo/pom.xml
+++ b/dubbo-demo/pom.xml
@@ -34,7 +34,7 @@
         <module>dubbo-demo-xml</module>
         <module>dubbo-demo-annotation</module>
         <module>dubbo-demo-api</module>
-        <module>dubbo-demo-redis</module>
+        <module>dubbo-demo-annotation-nacos</module>
     </modules>
 
     <dependencyManagement>
