--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 install: true
 
 script:
-  - travis_wait 30 ./mvnw clean install -DskipTests=false -Dcheckstyle.skip=false -Drat.skip=false -Dmaven.javadoc.skip=true
+  - travis_wait 30 ./build.sh
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
