Add dubbo-rpc-dubbo as a dependency to access DubboProcotol

--- a/dubbo-cluster/pom.xml
+++ b/dubbo-cluster/pom.xml
@@ -46,6 +46,11 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-rpc-dubbo</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba.middleware</groupId>
             <artifactId>metrics-os</artifactId>
         </dependency>
