fix null bugs with GenericAlias and add demo for GenericAlias

--- a/dubbo-demo/dubbo-generic-demo/dubbo-generic-demo-consumer/pom.xml
+++ b/dubbo-demo/dubbo-generic-demo/dubbo-generic-demo-consumer/pom.xml
@@ -18,35 +18,41 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.dubbo</groupId>
-        <artifactId>dubbo-parent</artifactId>
+        <artifactId>dubbo-generic-demo</artifactId>
         <version>${revision}</version>
     </parent>
-    <artifactId>dubbo-demo</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>dubbo-generic-demo-consumer</artifactId>
+    <packaging>jar</packaging>
     <name>${project.artifactId}</name>
-    <description>The demo module of dubbo project</description>
+    <description>The demo consumer module of dubbo project</description>
     <properties>
         <skip_maven_deploy>true</skip_maven_deploy>
     </properties>
-
-    <modules>
-        <module>dubbo-demo-interface</module>
-        <module>dubbo-demo-xml</module>
-        <module>dubbo-generic-demo</module>
-        <module>dubbo-demo-annotation</module>
-        <module>dubbo-demo-api</module>
-    </modules>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.apache.dubbo</groupId>
-                <artifactId>dubbo-bom</artifactId>
-                <version>${project.parent.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-demo-interface</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-registry-multicast</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-config-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-rpc-dubbo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-remoting-netty4</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-serialization-hessian2</artifactId>
+        </dependency>
+    </dependencies>
 </project>
