--- a/dubbo-dependencies-bom/pom.xml
+++ b/dubbo-dependencies-bom/pom.xml
@@ -105,6 +105,7 @@
         <jedis_version>2.9.0</jedis_version>
         <consul_version>1.4.2</consul_version>
         <consul_process_version>2.0.0</consul_process_version>
+        <consul_client_version>1.3.7</consul_client_version>
         <xmemcached_version>1.3.6</xmemcached_version>
         <cxf_version>3.1.15</cxf_version>
         <thrift_version>0.12.0</thrift_version>
@@ -159,7 +160,7 @@
         <mortbay_jetty_version>6.1.26</mortbay_jetty_version>
         <portlet_version>2.0</portlet_version>
         <maven_flatten_version>1.1.0</maven_flatten_version>
-        <revision>2.7.4-SNAPSHOT</revision>
+        <revision>2.7.5-cloudnative-SNAPSHOT</revision>
     </properties>
 
     <dependencyManagement>
@@ -259,6 +260,12 @@
                 <groupId>com.pszymczyk.consul</groupId>
                 <artifactId>embedded-consul</artifactId>
                 <version>${consul_process_version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.orbitz.consul</groupId>
+                <artifactId>consul-client</artifactId>
+                <version>${consul_client_version}</version>
             </dependency>
             <!-- Eureka -->
             <dependency>
