--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -15,13 +15,16 @@ jobs:
           java-version: 1.8
 
       - name: Prepare dependencies
-        run: ./mvnw clean install -DskipTests=true -Dversion=PR-${{ github.sha	}}
+        run: ./mvnw clean install -DskipTests=true -Drevision=PR-${{ github.sha	}}
+
+      - name: Clean workspace
+        run: rm -rf ./
 
       - name: Checkout dubbo-samples
         run: git clone https://github.com/apache/dubbo-samples.git
 
       - name: Prepare integration
-        run: cd /dubbo-samples && ./mvnw -U --batch-mode --no-transfer-progress --settings .mvn/settings.xml clean install -pl dubbo-maven-address-plugin -Ddubbo.version=PR-${{ github.sha	}}
+        run: cd dubbo-samples && ./mvnw -U --batch-mode --no-transfer-progress --settings .mvn/settings.xml clean install -pl dubbo-maven-address-plugin -Ddubbo.version=PR-${{ github.sha	}}
 
       - name: Run integration test
         run: ./mvnw -U --batch-mode --no-transfer-progress --settings .mvn/settings.xml clean verify -Pdubbo-integration-test -Djava-image.name=openjdk:8 -Ddubbo.version=PR-${{ github.sha }}
