--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <version>${revision}</version>
     <packaging>pom</packaging>
 
-    <name>${project.artifactId}</name>
+    <name>${project.artifactId}</name>ra
     <description>The parent project of dubbo</description>
     <url>https://github.com/apache/dubbo</url>
     <inceptionYear>2011</inceptionYear>
@@ -532,6 +532,7 @@
                                 <exclude>**/org/apache/dubbo/common/timer/HashedWheelTimer.java</exclude>
                                 <!-- exclude the edazdarevic files -->
                                 <exclude>**/org/apache/dubbo/common/utils/CIDRUtils.java</exclude>
+                                <exclude>.github/**</exclude>
                             </excludes>
                         </configuration>
                     </execution>
