add integration test

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <version>${revision}</version>
     <packaging>pom</packaging>
 
-    <name>${project.artifactId}</name>ra
+    <name>${project.artifactId}</name>
     <description>The parent project of dubbo</description>
     <url>https://github.com/apache/dubbo</url>
     <inceptionYear>2011</inceptionYear>
